--- a/unit6.ipynb
+++ b/unit6.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a6e627ac",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
     "for sentence in test_sentences:\n",
     "    tags, log_prob = hmm.viterbi(sentence)\n",
     "    print(f\"Sentence: {' '.join(sentence)}\")\n",
-    "    print(f\"Tags: {tags}\")\n",
+    "    print(f\"Predicted Tags: {tags}\")\n",
     "    print(f\"Log Probability: {log_prob:.4f}\\n\")"
    ]
   }
