upload notebook modification

--- a/unit6.ipynb
+++ b/unit6.ipynb
@@ -32,19 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a285f837",
    "metadata": {},
    "outputs": [],
    "source": [
     "hmm = HMMTagger()\n",
-    "hmm.set_laplace(True)\n",
     "hmm.train(training_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a6e627ac",
    "metadata": {},
    "outputs": [
@@ -52,29 +51,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentence: The cat meows\n",
-      "Tags: ['DET', 'NOUN', 'VERB']\n",
-      "Log Probability: -7.9448\n",
+      "=== MARKOV SEQUENCE PROBABILITIES ===\n",
+      "Evaluating known tag sequence:\n",
+      "P(DET | <S>) = 0.692308, P(The | DET) = 0.166667 → Step = 0.11538462\n",
+      "P(NOUN | DET) = 0.692308, P(cat | NOUN) = 0.166667 → Step = 0.11538462\n",
+      "P(VERB | NOUN) = 0.692308, P(meows | VERB) = 0.083333 → Step = 0.05769231\n",
+      "P(<E> | VERB) = 0.461538\n",
+      "Evaluating known tag sequence:\n",
+      "P(DET | <S>) = 0.692308, P(My | DET) = 0.083333 → Step = 0.05769231\n",
+      "P(NOUN | DET) = 0.692308, P(dog | NOUN) = 0.166667 → Step = 0.11538462\n",
+      "P(VERB | NOUN) = 0.692308, P(barks | VERB) = 0.083333 → Step = 0.05769231\n",
+      "P(ADV | VERB) = 0.307692, P(loudly | ADV) = 0.105263 → Step = 0.03238866\n",
+      "P(<E> | ADV) = 0.500000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === Part 1: Evaluate known sequences (Markov probability view) ===\n",
+    "print(\"=== MARKOV SEQUENCE PROBABILITIES ===\")\n",
+    "hmm.evaluate_known_sequence([\"The\", \"cat\", \"meows\"], [\"DET\", \"NOUN\", \"VERB\"])\n",
+    "hmm.evaluate_known_sequence([\"My\", \"dog\", \"barks\", \"loudly\"], [\"DET\", \"NOUN\", \"VERB\", \"ADV\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c3e4c8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== VITERBI POS TAGGING ===\n",
+      "Sentence: The can meows\n",
+      "Predicted Tags: ['DET', 'NOUN', 'VERB']\n",
       "\n",
       "Sentence: My dog barks loudly\n",
-      "Tags: ['DET', 'NOUN', 'VERB', 'ADV']\n",
-      "Log Probability: -11.9878\n",
+      "Predicted Tags: ['DET', 'NOUN', 'VERB', 'ADV']\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Test sentences\n",
+    "# === Part 2: Viterbi POS prediction on untagged input ===\n",
+    "print(\"=== VITERBI POS TAGGING ===\")\n",
     "test_sentences = [\n",
-    "    [\"The\", \"cat\", \"meows\"],\n",
+    "    [\"The\", \"can\", \"meows\"],\n",
     "    [\"My\", \"dog\", \"barks\", \"loudly\"]\n",
     "]\n",
     "\n",
     "for sentence in test_sentences:\n",
-    "    tags, log_prob = hmm.viterbi(sentence)\n",
+    "    tags = hmm.viterbi(sentence)\n",
     "    print(f\"Sentence: {' '.join(sentence)}\")\n",
-    "    print(f\"Predicted Tags: {tags}\")\n",
-    "    print(f\"Log Probability: {log_prob:.4f}\\n\")"
+    "    print(f\"Predicted Tags: {tags}\\n\")"
    ]
   }
  ],
