Finished Unit 6 Exercise - Used HMM from Sir Mat's repo - Improved README.md docs - Created Jupyter notebook for accesibility

--- a/quickview.ipynb
+++ b/quickview.ipynb
@@ -1,13 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "38124c16",
+   "metadata": {},
+   "source": [
+    "# **UNIT 6.2 Exercise Notebook**\n",
+    "\n",
+    "This notebook will serve as a platform to do a quick view to our answer to Unit 6 Exercise."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c55983e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from HMM import HMMTagger"
+    "from HMM import HiddenMarkovModel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6e90bd6",
+   "metadata": {},
+   "source": [
+    "1. **Implement a Hidden Markov model in Python, using the training datasets given on the Assignment for Unit 6.**\n",
+    "\n",
+    "The cell below showcases the training data that will be used. The training data is derived from the previous assignment. It is organized as a list, with each sentence as a list of tuples, which contains the word, and it's corresponding PoS tag. "
    ]
   },
   {
@@ -32,18 +52,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a285f837",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hmm = HMMTagger()\n",
+    "hmm = HiddenMarkovModel()\n",
     "hmm.train(training_data)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "934e34f5",
+   "metadata": {},
+   "source": [
+    "2. **Implement Viterbi algorithm to determine the best PoS sequence on the following test sentences**:\n",
+    "\n",
+    "- The cat meows\n",
+    "- The dog barks loudly\n",
+    "\n",
+    "The Viterbi algorithm is already implemented in the `HMM.py`, which classified a word in its respective tag by using transition probabilities and emission probabilities.\n",
+    "\n",
+    "The cell below is a demonstration."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "a6e627ac",
    "metadata": {},
    "outputs": [
@@ -51,66 +86,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== MARKOV SEQUENCE PROBABILITIES ===\n",
-      "Evaluating known tag sequence:\n",
-      "P(DET | <S>) = 0.692308, P(The | DET) = 0.166667 → Step = 0.11538462\n",
-      "P(NOUN | DET) = 0.692308, P(cat | NOUN) = 0.166667 → Step = 0.11538462\n",
-      "P(VERB | NOUN) = 0.692308, P(meows | VERB) = 0.083333 → Step = 0.05769231\n",
-      "P(<E> | VERB) = 0.461538\n",
-      "Evaluating known tag sequence:\n",
-      "P(DET | <S>) = 0.692308, P(My | DET) = 0.083333 → Step = 0.05769231\n",
-      "P(NOUN | DET) = 0.692308, P(dog | NOUN) = 0.166667 → Step = 0.11538462\n",
-      "P(VERB | NOUN) = 0.692308, P(barks | VERB) = 0.083333 → Step = 0.05769231\n",
-      "P(ADV | VERB) = 0.307692, P(loudly | ADV) = 0.105263 → Step = 0.03238866\n",
-      "P(<E> | ADV) = 0.500000\n"
-     ]
-    }
-   ],
-   "source": [
-    "# === Part 1: Evaluate known sequences (Markov probability view) ===\n",
-    "print(\"=== MARKOV SEQUENCE PROBABILITIES ===\")\n",
-    "hmm.evaluate_known_sequence([\"The\", \"cat\", \"meows\"], [\"DET\", \"NOUN\", \"VERB\"])\n",
-    "hmm.evaluate_known_sequence([\"My\", \"dog\", \"barks\", \"loudly\"], [\"DET\", \"NOUN\", \"VERB\", \"ADV\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0c3e4c8c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== VITERBI POS TAGGING ===\n",
-      "Sentence: The can meows\n",
+      "Sentence: ['The', 'cat', 'meows']\n",
       "Predicted Tags: ['DET', 'NOUN', 'VERB']\n",
-      "\n",
-      "Sentence: My dog barks loudly\n",
-      "Predicted Tags: ['DET', 'NOUN', 'VERB', 'ADV']\n",
-      "\n"
+      "Sentence: ['My', 'dog', 'barks', 'loudly']\n",
+      "Predicted Tags: ['DET', 'NOUN', 'VERB', 'ADV']\n"
      ]
     }
    ],
    "source": [
-    "# === Part 2: Viterbi POS prediction on untagged input ===\n",
-    "print(\"=== VITERBI POS TAGGING ===\")\n",
+    "# Test sentences\n",
     "test_sentences = [\n",
-    "    [\"The\", \"can\", \"meows\"],\n",
+    "    [\"The\", \"cat\", \"meows\"],\n",
     "    [\"My\", \"dog\", \"barks\", \"loudly\"]\n",
     "]\n",
     "\n",
     "for sentence in test_sentences:\n",
     "    tags = hmm.viterbi(sentence)\n",
-    "    print(f\"Sentence: {' '.join(sentence)}\")\n",
-    "    print(f\"Predicted Tags: {tags}\\n\")"
+    "    print(f\"Sentence: {sentence}\")\n",
+    "    print(f\"Predicted Tags: {tags}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c94b9afb",
+   "metadata": {},
+   "source": [
+    "**Prepared by**:\n",
+    "\n",
+    "- CARADO, JOHN MANUEL\n",
+    "- TACUEL, ALLAN ANDREWS\n",
+    "\n",
+    "BSCS 3A - CCS 249 NLP"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -124,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
